--- a/index.html
+++ b/index.html
@@ -27,17 +27,35 @@
       </div>
     </header>
 <!-- Header -->
+
 <!-- Menu -->
   <nav id="menu-container" class="navbar navbar-light">
     <div class="container">
       <div class="row">
-        <div class="col-xs-10 col-md-4">
+        <div class="col-xs-10 offset-xs-2 col-md-4 offset-md-0">
           <ul class="nav navbar-nav">
-            
+            <li class="nav-item active">
+              <a href="" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Catalogo</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Carrito</a>
+            </li>
           </ul>
         </div>
         <div class="col-xs-12 col-md-6 offset-md-2">
-          Buscador
+          <form>
+            <div class="input-group">
+              <input type="text" class="form-control" name="" placeholder="¿Encontro lo que buscaba?">
+              <span class="input-group-btn">
+                <button class="btn btn-platzi" type="button">
+                  Buscar
+                </button>
+              </span>
+            </div>
+          </form>
         </div>
       </div>  
     </div>
