--- a/index.html
+++ b/index.html
@@ -91,6 +91,48 @@
  
 <!-- Menu -->
 
+<!-- Carousel -->  
+<div id="carousel-container">
+  <div id="productosCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#productosCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#productosCarousel" data-slide-to="1"></li>
+      <li data-target="#productosCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img src="images/producto.svg" alt="Primer producto">
+        <div class="carousel-caption">
+          <h4>Producto 1</h4>
+          <p class="hidden-sm-down">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/producto.svg" alt="Segundo producto">
+        <div class="carousel-caption">
+          <h4>Producto 2</h4>
+          <p class="hidden-sm-down">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/producto.svg" alt="Tercer producto">
+        <div class="carousel-caption">
+          <h4>Producto 3</h4>
+          <p class="hidden-sm-down">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
+      </div>
+    </div>
+    <a class="left carousel-control" href="#productosCarousel" role="button" data-slide="prev">
+      <span class="icon-prev" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#productosCarousel" role="button" data-slide="next">
+      <span class="icon-next" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<!-- Carousel -->  
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
