--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
   </div>
 </div>
 <!-- Carousel -->  
+
+<!-- Info -->  
+  <div id="info-container" >
+    <div class="container">
+      <div class="row text-xs-center">
+        <div class="col-xs-12 col-md-4">
+          <img src="images/calidad.png" alt="Calidad" class="img-fluid">
+          <h4>Calidad</h4>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <img src="images/envio.png" alt="Calidad" class="img-fluid">
+          <h4>Envio Gratis</h4>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <img src="images/soporte.png" alt="Calidad" class="img-fluid">
+          <h4>Soporte 24 hrs</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- Info -->  
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
