--- a/catalogo.html
+++ b/catalogo.html
@@ -91,6 +91,24 @@
  
 <!-- Menu -->
 
+<!-- Breadcrumbs -->
+<section id="breadcrumbs-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs">
+        <nav class="breadcrumb">
+          <a href="catalogo.html" class="breadcrumb-item">Catalogo</a>
+          <span class="breadcrumb-item active">Todos los productos</span>
+        </nav>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Breadcrumbs -->
+
+
+
 <!-- Footer -->  
 
     <div id="footer-container">
